# skellyviewer-nuxtor

./: README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
src-nuxt/components/: AnimatedBox.vue  FilePicker.vue
src-nuxt/components/Site/: Navbar.vue
src-nuxt/layouts/: default.vue
src-nuxt/pages/: select.vue
src-nuxt/stores/: csvStore.ts
src-python/skellyviewer-python/: __main__.py
src-tauri/: tauri.conf.json
src-tauri/capabilities/: main.json
src/components/: CsvLoader.vue
src/components/Site/: Navbar.vue
src/middleware/: sidebar.global.ts
src/pages/: select.vue  viewport3d.vue
src/stores/: csvStore.ts  frameNumber.ts
