[tool.poetry]
name = "skellyviewer-python"
version = "0.1.0"
description = ""
authors = ["Skelly FreeMoCap <info@freemocap.org>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9, <3.13"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
websockets = "^12.0"
polars = "^1.3.0"
numpy = "^2.0.1"
pyarrow = "^17.0.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
bumpver = "^2023.1129"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

